[package]
name = "gefolge-web"
version = "0.1.0"
authors = [
    "Fenhl <fenhl@fenhl.net>",
    "Leif <leif@leif.tw>"
]
edition = "2021"

[dependencies]
pyo3 = "0.15"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["model", "rustls_backend"] #TODO remove rustls-backend feature when https://github.com/serenity-rs/serenity/issues/763 is fixed
